@@ -8,7 +8,6 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityCustomizer;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -24,7 +23,9 @@ import saphy.saphy.auth.repository.RefreshRepository;
 import saphy.saphy.auth.utils.JWTUtil;
 import saphy.saphy.member.domain.repository.MemberRepository;
 
+import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -35,6 +36,10 @@ public class SecurityConfig {
     private final JWTUtil jwtUtil;
     private final MemberRepository memberRepository;
     private final RefreshRepository refreshRepository;
+
+    private static final String[] PUBLIC_URLS = {
+            "/**"
+    };
 
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration configuration) throws Exception {
@@ -47,37 +52,24 @@ public class SecurityConfig {
     }
 
     @Bean
-    public WebSecurityCustomizer webSecurityCustomizer() {
-        return (web) -> web.ignoring().requestMatchers(
-                "/oauth2/login",
-                "/oauth2/join"
-        );
-    }
-
-
-    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
 
+        // CORS 설정
         http
                 .cors((cors) -> cors
-                        .configurationSource((new CorsConfigurationSource() {
-
+                        .configurationSource(new CorsConfigurationSource() {
                             @Override
                             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
-
                                 CorsConfiguration configuration = new CorsConfiguration();
-
+                                // configuration.setAllowedOrigins(Arrays.asList("http://localhost:8080", "http://localhost:3000","https://saphy.site/"));
                                 configuration.setAllowedOrigins(Collections.singletonList("*")); // test용
-                                configuration.setAllowedMethods(Collections.singletonList("*"));
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
-
-                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
-
+                                configuration.setExposedHeaders(List.of("Authorization"));
                                 return configuration;
                             }
-                        })));
+                        }));
 
         http
                 .csrf(AbstractHttpConfigurer::disable);
@@ -88,20 +80,13 @@ public class SecurityConfig {
         http
                 .httpBasic(AbstractHttpConfigurer::disable);
 
-        // 실제 서비스 사용 접근별 인가 작업
-//        http
-//                .authorizeHttpRequests((auth) -> auth
-//                        .requestMatchers("/login", "/", "/members/join", "/oauth/**").permitAll()
-//                        .requestMatchers("/admin").hasRole("ADMIN")
-//                        .anyRequest().authenticated());
-
         // 경로별 인가 작업(test 단계에서만 사용 접근 권한)
         http
                 .authorizeHttpRequests((auth) -> auth
-                        .requestMatchers("/**").permitAll()
+                        .requestMatchers(PUBLIC_URLS).permitAll()
                         .anyRequest().authenticated());
 
-        // JWTFilter 추가
+        // JWT, 로그인, 로그아웃 커스텀 필터 삽입
         http
                 .addFilterBefore(new JWTFilter(jwtUtil, memberRepository), LoginFilter.class);
         http
@@ -122,3 +107,15 @@ public class SecurityConfig {
         return http.build();
     }
 }
+
+//private static final String[] PUBLIC_URLS = {
+//        "/health",
+//        "/oauth2/**",
+//        "/login/**",
+//        "/members/join",
+//        "/reissue",
+//        "/v3/**",
+//        "/swagger-ui/**",
+//        "/error",
+//        "/"
+//};
